--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "the500q",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "4.2.2",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "popper.js": "^1.16.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.10.1"
+  }
 }
